--- a/Work.WebProj/Views/Index/Index.cshtml
+++ b/Work.WebProj/Views/Index/Index.cshtml
@@ -43,7 +43,7 @@
 <section class="about">
     <article>
         <h2>ABOUT US</h2>
-        <p><strong>承信堆高機</strong>專業經營日本外匯進口堆高機及各廠牌之柴油、汽油堆高機、電動堆高機等買賣及中長期租賃，更有專業的服務團隊、品質精良的產品，來滿足您物流硬體需求。<br>本公司有專業維修保養廠及優良的維護工程師團隊，工程師皆受過各式堆高機專業完整的技術訓練及高品質的維護經驗。<br>我們的中古堆高機皆自日本外匯原裝進口，品質優良、價格合理、售後服務效率高，是貴公司長期合作的好夥伴，有現貨可供挑選，歡迎親臨本廠實際檢驗、實車操作，有專業技師現場解說，相信能符合貴公司需求。<br>現場近百餘輛堆高機 1T~15T 機種齊全，歡迎參觀。</p>
+        <p><strong>承信堆高機</strong>專業經營日本外匯進口堆高機,中古堆高機及各廠牌之柴油、汽油堆高機,中古堆高機、電動堆高機,中古堆高機等買賣及中長期租賃，更有專業的服務團隊、品質精良的產品，來滿足您物流硬體需求。<br>本公司有專業維修堆高機,中古堆高機保養廠及優良的維護工程師團隊，工程師皆受過各式堆高機專業完整的技術訓練及高品質的維護經驗。<br>我們的堆高機,中古堆高機皆自日本外匯原裝進口，品質優良、價格合理、售後服務效率高，是貴公司長期合作的好夥伴，有現貨可供挑選，歡迎親臨本廠實際檢驗、實車操作，有專業技師現場解說，相信能符合貴公司需求。<br>現場近百餘輛堆高機,中古堆高機 1T~15T 機種齊全，歡迎參觀。</p>
         <a href="~/AboutUs" class="btn">→ Read more...</a>
     </article>
 </section>
