--- a/Work.WebProj/Views/Shared/Layout.cshtml
+++ b/Work.WebProj/Views/Shared/Layout.cshtml
@@ -40,7 +40,7 @@
                 <a href="~/ContactUs">聯絡我們</a>
             </nav>
 
-            <div class="summary">二手．全新堆高機　內壢交流道附近，歡迎來廠賞車　中古買賣．維修．中長期租賃</div>
+            <div class="summary">二手中古堆高機．全新堆高機　內壢交流道附近，歡迎來廠賞車　中古買賣．維修．中長期租賃</div>
 
             <div id="banner" class="flexslider">
                 <ul class="slides">
@@ -98,7 +98,7 @@
     </div><!-- container //-->
 
     <footer>
-        <div class="copyright">Cheng Shen Forklift Co., Ltd. &copy; 2015</div>
+        <div class="copyright">Cheng Shen Forklift Co., Ltd. &copy; 2015 承信堆高機專營：<a href="http://chengshen.com.tw/">堆高機</a>,<a href="http://chengshen.com.tw/">中古堆高機</a></div>
     </footer>
 
     <!-- 滑動 goTop -->
