線上諮詢 增加 公司名稱、地址欄位

--- a/Work.WebProj/Views/Service/Email.cshtml
+++ b/Work.WebProj/Views/Service/Email.cshtml
@@ -15,6 +15,13 @@
             以下為聯絡人資料
         </caption>
         <tr>
+            <td style="color:#9C7163; padding:5px; border:1px solid #ccc">公司名稱</td>
+            <td style="width:150px; padding:5px; border:1px solid #ccc" colspan="2">@Model.company</td>
+            <td style="color:#9C7163; padding:5px; border:1px solid #ccc">地址</td>
+            <td style="width:150px; padding:5px; border:1px solid #ccc" colspan="2">@Model.address</td>
+
+        </tr>
+        <tr>
             <td style="color:#9C7163; padding:5px; border:1px solid #ccc">姓名</td>
             <td style="width:150px; padding:5px; border:1px solid #ccc" colspan="2">@Model.name</td>
             <td style="color:#9C7163; padding:5px; border:1px solid #ccc">性別</td>
