--- a/Work.WebProj/Views/Index/Index.cshtml
+++ b/Work.WebProj/Views/Index/Index.cshtml
@@ -51,12 +51,12 @@
 <section class="contacts">
     <article>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.0768042452264!2d121.23683611296038!3d24.997506047286993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346821bf97655fdf%3A0x599e579de634c7d7!2zMzIw5qGD5ZyS5biC5Lit5aOi5Y2A5Lit5ZyS6Lev5LqM5q61Mi0yMeiZnw!5e0!3m2!1szh-TW!2stw!4v1447658981116" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <h2>CONTACUTS</h2>
+        <h2>CONTACT US</h2>
         <ul>
-            <li>地址: 桃園市中壢區中園路二段46巷381號</li>
-            <li>服務專線: <strong>03-4513161</strong> (代表號)</li>
-            <li>傳真: 03-4511424</li>
-            <li>E- mail: <a href="mailto:hsieh.y103688@msa.hinet.net">hsieh.y103688@msa.hinet.net</a></li>
+            <li>地址:桃園市中壢區中園路二段46巷381號</li>
+            <li>服務專線:<strong>03-4513161</strong> (代表號)</li>
+            <li>傳真:03-4511424</li>
+            <li>E- mail:<a href="mailto:hsieh.y103688@msa.hinet.net">hsieh.y103688@msa.hinet.net</a></li>
         </ul>
     </article>
 </section>
