--- a/Work.WebProj/Content/css/base/layout.css
+++ b/Work.WebProj/Content/css/base/layout.css
@@ -11,7 +11,7 @@ body > #container { height:auto; min-height: 100%; }
 header, #main, footer {
     position:relative;
     margin: auto;
-    min-width: 1007px;
+    min-width: 320px;
 }
 header {
     height: 136px;
@@ -35,15 +35,20 @@ footer {
 
 /*      header
 -----------------------------------------------------------------------*/
-h1, #main-nav { position: absolute; left: 50%; top: 0;}
+header .wrap {
+    width: 1170px;
+    margin: 0 auto;
+    position: relative;
+}
+/*h1, #main-nav { position: absolute; left: 50%; top: 0;}*/
 
 /* logo */
 h1 {
     background: url(../../images/logo.gif) no-repeat 0 0;
     text-indent: -9999px;
     width: 360px; height:67px;
-    top: 29px;
-    margin-left: -504px;
+    margin-top: 29px;
+    float: left;
     cursor:pointer; cursor:hand;
     }
 
@@ -51,8 +56,9 @@ h1 {
 
 
 /* 主選單 */
+.nav-trigger {display: none;}
 #main-nav {
-    margin-left: -110px;
+    float: right;
     z-index: 20
 }
 #main-nav a {
@@ -67,7 +73,7 @@ h1 {
     font-weight: bold;
 
     padding: 65px 0 24px 0;
-    width: 120px;
+    width: 155px;
 }
 #main-nav :nth-child(2) { background-position: center -132px}
 #main-nav :nth-child(3) { background-position: center -312px}
@@ -108,7 +114,7 @@ h1 {
     font-size: .75em;
     line-height: 44px;
     text-align: left;
-    max-width: 1220px;
+    width: 1170px;
     margin: auto;
 }
 
@@ -201,9 +207,123 @@ figure figcaption::before {
 figure:hover figcaption::before { opacity: .95; }
 
 
-/*-- 寬螢幕 --*/
-@media all and (min-width: 1025px) {
-    h1 { margin-left: -610px; }
-    #main-nav { margin-left: -200px; }
-    #main-nav a { width: 160px; }
+/*      RWD
+-----------------------------------------------------------------------*/
+
+@media (max-width: 1199px) {
+    header .wrap, .copyright {width: 960px;}
+    h1 {width: 265px;}
+    #main-nav a {width: 132px;}
+}
+
+@media (max-width: 991px) {
+    header .wrap, .copyright {width: 740px;}
+    header::before {
+        content:" ";
+        display: block;
+        width: 100%;
+        height: 1px;
+        background: #E8E8E8;
+        position: absolute;
+        left: 0;
+        top: 85px;
+    }
+    h1 {
+        width: 360px;
+        height: 75px;
+        margin-top: 10px;
+    }
+    #main-nav {
+        width: 100%;
+        margin-top: 1px;
+    }
+    #main-nav a {
+        width: 20%;
+        padding: 60px 0 15px 0;
+        background-position: center 23px;
+    }
+    #main-nav :nth-child(2) {background-position: center -145px;}
+    #main-nav :nth-child(3) {background-position: center -320px;}
+    #main-nav :nth-child(4) {background-position: center -500px;}
+    #main-nav :nth-child(5) {background-position: center -675px; border-right: 1px solid #E8E8E8;}
+}
+
+@media (max-width: 767px) {
+    header .wrap, .copyright {width: 546px;}
+    #main-nav a {
+        padding: 55px 0 15px 0;
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 575px) {
+    header .wrap, .copyright {
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    header::before {top: 73px;}
+    h1 {
+        width: 220px;
+        height: 55px;
+        margin: 10px 0 8px 0;
+        background-size: auto 100%;
+    }
+    .nav-trigger {
+        display: block;
+        width: 46px;
+        height: 46px;
+        position: absolute;
+        top: 14px;
+        right: 20px;
+        font-size: 0;
+        text-indent: -9999;
+        background: #9397D8;
+        overflow: hidden;
+        cursor: pointer;
+        transition: background 0.3s;
+    }
+    .nav-trigger span::before, .nav-trigger span::after {
+        content: " ";
+        transition-duration: 0.3s, 0.3s;
+        transition-delay: 0.3s, 0s;
+    }
+    .nav-trigger span,
+    .nav-trigger span::before,
+    .nav-trigger span::after
+    {
+        display: block;
+        width: 30px;
+        height: 3px;
+        position: absolute;
+        background: #fff;
+    }
+    .nav-trigger span {left: 8px; top: 50%; transform: translateY(-50%); transition: background 0s 0.3s;}
+    .nav-trigger span::before {left: 0; top: -9px; transition-property: top, transform;}
+    .nav-trigger span::after {left: 0; bottom: -9px; transition-property: bottom, transform;}
+    .nav-trigger.active {background: #7E82C2;}
+    .nav-trigger.active span {background: none;}
+    .nav-trigger.active span::before {top: 0; transform: rotate(45deg); transition-delay: 0s, 0.3s;}
+    .nav-trigger.active span::after {bottom: 0; transform: rotate(-45deg); transition-delay: 0s, 0.3s;}
+    #main-nav {
+        display: none;
+        border: 1px solid #E8E8E8;
+        border-width: 0 1px;
+    }
+    #main-nav a {
+        width: 100%;
+        padding: 15px 10px 15px 60px;
+        float: none;
+        text-align: left;
+        border-bottom: 1px solid #E8E8E8;
+        border-width: 0 0 1px 0;
+        background-position: 10px 15px;
+    }
+    #main-nav :nth-child(2) {background-position: 10px -153px;}
+    #main-nav :nth-child(3) {background-position: 10px -328px;}
+    #main-nav :nth-child(4) {background-position: 10px -508px;}
+    #main-nav :nth-child(5) {background-position: 10px -685px; border:0;}
+    footer {height: 68px;}
+    .copyright {padding: 10px 15px; line-height: 2;}
+    .copyright .keywords {display: block;}
 }
