--- a/Work.WebProj/Content/css/page.css
+++ b/Work.WebProj/Content/css/page.css
@@ -45,10 +45,10 @@ aside {
     display: none;
 }
 #banner {
-    max-width: 100%;
+    width: 100%;
     top: 108px;
 }
-#banner .slides { height: 200px; }
+#banner .slides { width: 100%; height: 200px; }
 #banner .slides > li {
     background: url(../images/banner.jpg) center 0 no-repeat;
     width: 100%; height: 100%;
@@ -219,11 +219,23 @@ iframe {
 }
 
 
+/* RWD
+-----------------------------------------------------------------------*/
+@media (max-width: 1199px) {
+
+}
+
+@media (max-width: 991px) {}
+
+@media (max-width: 767px) {}
+
+@media (max-width: 575px) {}
+
 /*-- 寬螢幕 --*/
-@media all and (min-width: 1025px) {
+/*@media all and (min-width: 1025px) {
     #main { max-width: 1220px; }
     #content { width: 980px; }
     figure { width: 300px; margin-right: 8px; }
     figure img { clip: rect(0px,298px,190px,0px); }
     .info dl { max-width: 450px; }
-}
+}*/
