--- a/Work.WebProj/Views/Shared/sidebar.cshtml
+++ b/Work.WebProj/Views/Shared/sidebar.cshtml
@@ -1,4 +1,6 @@
-﻿<aside>
+﻿@* <button class="aside-trigger">請選擇產品</button> *@
+
+<aside>
     @if (ViewBag.Brand == null)
     {
         <h4>SECOND HAND</h4>
