--- a/Work.WebProj/Content/css/base/layout.css
+++ b/Work.WebProj/Content/css/base/layout.css
@@ -52,7 +52,7 @@ h1 {
     cursor:pointer; cursor:hand;
     }
 
-#banner { width: 100%; }
+#banner {width: 100%; clear:both;}
 
 
 /* 主選單 */
@@ -218,16 +218,6 @@ figure:hover figcaption::before { opacity: .95; }
 
 @media (max-width: 991px) {
     header .wrap, .copyright {width: 740px;}
-    header::before {
-        content:" ";
-        display: block;
-        width: 100%;
-        height: 1px;
-        background: #E8E8E8;
-        position: absolute;
-        left: 0;
-        top: 85px;
-    }
     h1 {
         width: 360px;
         height: 75px;
@@ -239,20 +229,23 @@ figure:hover figcaption::before { opacity: .95; }
     }
     #main-nav a {
         width: 20%;
-        padding: 60px 0 15px 0;
-        background-position: center 23px;
+        padding: 50px 0 15px 0;
+        font-size: 1em;
+        background-position: center 17px;
     }
-    #main-nav :nth-child(2) {background-position: center -145px;}
-    #main-nav :nth-child(3) {background-position: center -320px;}
-    #main-nav :nth-child(4) {background-position: center -500px;}
-    #main-nav :nth-child(5) {background-position: center -675px; border-right: 1px solid #E8E8E8;}
+    #main-nav :nth-child(2) {background-position: center -151px;}
+    #main-nav :nth-child(3) {background-position: center -327px;}
+    #main-nav :nth-child(4) {background-position: center -506px;}
+    #main-nav :nth-child(5) {background-position: center -682px; border-right: 1px solid #E8E8E8;}
 }
 
 @media (max-width: 767px) {
     header .wrap, .copyright {width: 546px;}
-    #main-nav a {
-        padding: 55px 0 15px 0;
-        font-size: 1em;
+    h1 {
+        width: 330px;
+        height: 60px;
+        margin: 10px 0 5px 0;
+        background-size: auto 100%;
     }
 }
 
@@ -262,12 +255,10 @@ figure:hover figcaption::before { opacity: .95; }
         padding-left: 15px;
         padding-right: 15px;
     }
-    header::before {top: 73px;}
     h1 {
         width: 220px;
         height: 55px;
         margin: 10px 0 8px 0;
-        background-size: auto 100%;
     }
     .nav-trigger {
         display: block;
