--- a/Work.WebProj/Content/css/index.css
+++ b/Work.WebProj/Content/css/index.css
@@ -243,6 +243,16 @@ iframe {
 }
 
 @media (max-width: 991px) {
+    header::before {
+        content:" ";
+        display: block;
+        width: 100%;
+        height: 1px;
+        background: #E8E8E8;
+        position: absolute;
+        left: 0;
+        top: 85px;
+    }
     #banner, article, .about article {width: 740px;}
     #banner {height: 18.75em; margin-top: 15px;}
     #banner img {
@@ -281,6 +291,7 @@ iframe {
 }
 
 @media (max-width: 767px) {
+    header::before {top: 75px;}
     #banner, article, .about article {width: 546px;}
 
     .summary {padding: 10px 0;}
@@ -373,6 +384,7 @@ iframe {
 }
 
 @media (max-width: 575px) {
+    header::before {top: 73px;}
     #banner, article, .about article {
         width: 100%;
         padding-left: 15px;
