--- a/Work.WebProj/Content/css/base/layout.css
+++ b/Work.WebProj/Content/css/base/layout.css
@@ -276,7 +276,9 @@ figure:hover figcaption::before { opacity: .95; }
     }
     .nav-trigger span::before, .nav-trigger span::after {
         content: " ";
+        -webkit-transition-duration: 0.3s, 0.3s;
         transition-duration: 0.3s, 0.3s;
+        -webkit-transition-delay: 0.3s, 0s;
         transition-delay: 0.3s, 0s;
     }
     .nav-trigger span,
@@ -289,13 +291,42 @@ figure:hover figcaption::before { opacity: .95; }
         position: absolute;
         background: #fff;
     }
-    .nav-trigger span {left: 8px; top: 50%; transform: translateY(-50%); transition: background 0s 0.3s;}
-    .nav-trigger span::before {left: 0; top: -9px; transition-property: top, transform;}
-    .nav-trigger span::after {left: 0; bottom: -9px; transition-property: bottom, transform;}
+    .nav-trigger span {
+        left: 8px; top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        -webkit-transition: background 0s 0.3s;
+        transition: background 0s 0.3s;
+    }
+    .nav-trigger span::before {
+        left: 0; top: -9px;
+        -webkit-transition-property: top, transform;
+        transition-property: top, transform;
+    }
+    .nav-trigger span::after {
+        left: 0; bottom: -9px;
+        -webkit-transition-property: bottom, transform;
+        transition-property: bottom, transform;
+    }
     .nav-trigger.active {background: #7E82C2;}
     .nav-trigger.active span {background: none;}
-    .nav-trigger.active span::before {top: 0; transform: rotate(45deg); transition-delay: 0s, 0.3s;}
-    .nav-trigger.active span::after {bottom: 0; transform: rotate(-45deg); transition-delay: 0s, 0.3s;}
+    .nav-trigger.active span::before {
+        top: 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+        -webkit-transition-delay: 0s, 0.3s;
+        transition-delay: 0s, 0.3s;
+    }
+    .nav-trigger.active span::after {
+        bottom: 0;
+        -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+        -webkit-transition-delay: 0s, 0.3s;
+        transition-delay: 0s, 0.3s;
+    }
     #main-nav {
         display: none;
         border: 1px solid #E8E8E8;
